2020-09-24
----------
- Improve FFT interpolation.
- Add second channel to frequency response.

2020-07-01
----------
- Migrate to CMake.
- Migrate README to markdown and move change list to NEWS.
- Migrated project from subversion to git.

2019-09-25
----------
- add FFT window functions Hanning and Blackman.
- add spectrum scaling according to sample rate.
- modify spectrum view 10 Hz - 100kHz, 0 - -100 dB.
- fix sound card dialog (available frequencies).

2019-09-22
----------
- update RtAudio to version 5.1.0

2018-??-??
----------
- Updated code to compile with current compilers on Linux.
- Updated code to compile with recent versions of rtaudio and
  wxWidgets.
- Documented the choice of GNU GPL v2+ as source license.
- Added code to save and load frequency response data as CSV.

2008-08-27
----------
- sound card switching works; but problems when using different sound cards
for input and output

2008-08-26
----------
- changed colors for numbers in scopes
- OSC - L channel measures frequency - FFT
- "Audio Interface" Dlg extended with sampling frequency
- "Audio Interface" Dlg shows available interfaces but settings do not work yet

2008-08-25
----------
- first Linux port!!! - compilable with wxGTK-2.6.4 wth GTK2 and
  UNICODE; a plenty of problems:
   - GEN gauges do not work as expected
   - glitches in generator
   - wxTextCtrls do not react to ENTERs
- SA - variable FFT length
- SA - right channel is added
- SA - averaging of FFT values introduced

2008-08-22
----------
- renamed OScopeCtrl->CtrlOScope; double buffering and some other features
  added
- #define for switch XScale to microseconds/div - but a lot of problems with
  strange modulation

2008-08-21
----------
- first working version of AudMeS with RtAudio driver - MinGW compiler
- Select Sound Card dlg does not work; default device is used

2008-08-20
----------
- rewrite of audio driver started - RtAudio will be used now

2008-08-15
----------
- added rectangular, triangle, saw generators