@@ -45,15 +45,19 @@ if (WIN32)
 	target_link_libraries(${PROJECT_NAME} -mwindows -static ${wxWidgets_LIBRARIES} dsound)
 endif()
 
-install(TARGETS "AudMeS" DESTINATION "bin")
-install(FILES "audmes.desktop" DESTINATION "share/applications")
-install(FILES "audmes.png" DESTINATION "share/pixmaps")
-install(FILES "audmes.png" DESTINATION "share/icons/hicolor/128x128/apps/")
+if (${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
+	install(TARGETS "AudMeS" DESTINATION "bin")
+	install(FILES "audmes.desktop" DESTINATION "share/applications")
+	install(FILES "audmes.png" DESTINATION "share/pixmaps")
+	install(FILES "audmes.png" DESTINATION "share/icons/hicolor/128x128/apps/")
 
-SET(CPACK_GENERATOR "DEB")
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "swwa")
-SET(CPACK_DEBIAN_PACKAGE_SECTION "sound")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "pulseaudio, libwxgtk3.0-0v5")
-SET(CPACK__DEBIAN_PACKAGE_HOMEPAGE "https://sourceforge.net/projects/audmes/")
-set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
+	set(CPACK_GENERATOR "DEB")
+	set(CPACK_DEBIAN_PACKAGE_VERSION "2021-03-14")
+	set(CPACK_DEBIAN_PACKAGE_MAINTAINER "swwa")
+	set(CPACK_DEBIAN_PACKAGE_SECTION "sound")
+	set(CPACK_DEBIAN_PACKAGE_DEPENDS "pulseaudio, libwxgtk3.0-0v5")
+	set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://sourceforge.net/projects/audmes/")
+	set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
+endif()
+
 INCLUDE(CPack)
